--- a/semana15/apiRest/package.json
+++ b/semana15/apiRest/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "net": "^1.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
