--- a/semana16/TodoList/package.json
+++ b/semana16/TodoList/package.json
@@ -15,7 +15,9 @@
   "description": "Projeto da semana 16 - TodoList",
   "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node-dev ./src/server.ts",
+    "start": "tsc && node ./build.server.js",
+    "build": "tsc"
   },
   "author": "Tiago Kodama",
   "license": "ISC"
