--- a/semana16/TodoList/package.json
+++ b/semana16/TodoList/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.11",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "typescript": "^4.5.0-dev.20211001"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -15,8 +16,8 @@
   "description": "Projeto da semana 16 - TodoList",
   "main": "src/server.ts",
   "scripts": {
-    "test": "ts-node-dev ./src/server.ts",
-    "start": "tsc && node ./build.server.js",
+    "dev": "ts-node-dev ./src/server.ts",
+    "start": "tsc && node ./build/server.js",
     "build": "tsc"
   },
   "author": "Tiago Kodama",
