--- a/semana18/package.json
+++ b/semana18/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc node ./build/app.js",
+    "start": "tsc && node ./build/app.js",
     "dev": "ts-node-dev ./src/app.ts",
     "migrate": "echo 'Nada foi feito, ainda'"
   },
