--- a/semana18/package.json
+++ b/semana18/package.json
@@ -16,12 +16,14 @@
     "express": "^4.17.1",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/knex": "^0.16.1",
+    "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8"
   }
 }
