--- a/semana19/package.json
+++ b/semana19/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node ./build/app.js",
     "dev": "ts-node-dev ./src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "tiago kodama",
   "license": "ISC",
@@ -23,7 +23,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/knex": "^0.16.1",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8"
   }
 }
