--- a/semana19/package.json
+++ b/semana19/package.json
@@ -18,13 +18,15 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/knex": "^0.16.1",
+    "@types/uuid": "^8.3.1",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8"
