migration and seed

--- a/semana19/package.json
+++ b/semana19/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "tsc && node ./build/app.js",
     "dev": "ts-node-dev ./src/app.ts",
-    "test": "npx jest"
+    "test": "npx jest",
+    "migrate": "ts-node-dev ./src/database/setupDataBase.ts",
+    "seed": "ts-node-dev ./src/database/seedDataBase.ts"
   },
   "author": "tiago kodama",
   "license": "ISC",
