--- a/semana19/package.json
+++ b/semana19/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node ./build/app.js",
     "dev": "ts-node-dev ./src/app.ts",
     "test": "npx jest",
-    "migrate": "ts-node-dev ./src/database/setupDataBase.ts"
+    "migrate": "ts-node-dev ./src/database/setupDataBase.ts",
+    "seed": "ts-node-dev ./src/database/seedDataBase.ts"
   },
   "author": "tiago kodama",
   "license": "ISC",
@@ -23,9 +24,11 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/knex": "^0.16.1",
     "@types/uuid": "^8.3.1",
     "jest": "^27.3.1",
