--- a/semana20/package.json
+++ b/semana20/package.json
@@ -4,9 +4,9 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "migrations": "tsc && node ./build/database/migrations.js",
+      "migrations": "ts-node-dev ./src/database/migrations.ts",
       "start": "npm run build && node --inspect ./build/src/app.js",
-      "dev": "clear && ts-node-dev ./src/index.ts",
+      "dev": "clear && ts-node-dev ./src/app.ts",
       "build": "clear && echo \"Transpiling files...\" && tsc && echo \"Done!\" ",
       "test": "npx jest"
    },
