--- a/semana21/package.json
+++ b/semana21/package.json
@@ -7,5 +7,19 @@
     "test": "echo testando"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "knex": "^0.95.12",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.6",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
+  }
 }
