--- a/semana21/package.json
+++ b/semana21/package.json
@@ -4,7 +4,10 @@
   "description": "Pokemon",
   "main": "app.js",
   "scripts": {
-    "test": "echo testando"
+    "test": "echo testando",
+    "start": "tsc && node ./build/app.js",
+    "dev": "ts-node-dev ./src/app.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
