--- a/semana21/package.json
+++ b/semana21/package.json
@@ -7,16 +7,20 @@
     "test": "echo testando",
     "start": "tsc && node ./build/app.js",
     "dev": "ts-node-dev ./src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate": "ts-node-dev ./src/database/setupMigration.ts",
+    "seed": "ts-node-dev ./src/database/setupSeed.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.12",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
