--- a/semana21/package.json
+++ b/semana21/package.json
@@ -4,7 +4,7 @@
   "description": "Pokemon",
   "main": "app.js",
   "scripts": {
-    "test": "echo testando",
+    "test": "npx jest --detectOpenHandles",
     "start": "tsc && node ./build/app.js",
     "dev": "ts-node-dev ./src/app.ts",
     "build": "tsc",
@@ -25,7 +25,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
